# CMakeTalk

./: .gitignore  LICENSE  README.md
add_dynamic_library_example/: CMakeLists.txt
add_dynamic_library_example/my_library/: CMakeLists.txt
add_dynamic_library_example/my_library/include/: bar.h
add_dynamic_library_example/my_library/src/: bar.cpp
add_external_project_example/: CMakeLists.txt  README.md
add_external_project_example/src/: foo_test.cpp
add_library_example/: CMakeLists.txt  README.md
add_library_example/src/: foo.cpp
add_library_subdirectory_example/: README.md
add_library_subdirectory_example/include/: foo.h
add_library_subdirectory_example/my_library/src/: bar.cpp
custom_target_sample/: CMakeLists.txt  README.md  modify_source.py
custom_target_sample/src/: foo.cpp  foo_modified.cpp
find_package_example/: README.md
find_package_example/project_example/: CMakeLists.txt
importance_of_hiding_symbols_example/: CMakeLists.txt  big_file_generator.py
importance_of_hiding_symbols_example/include/: foo.h
importance_of_hiding_symbols_example/my_library/: CMakeLists.txt
importance_of_hiding_symbols_example/my_library/include/: bar_export.h
importance_of_hiding_symbols_example/my_library/src/: bar_export.cpp
importance_of_hiding_symbols_example/my_library_no_export/: CMakeLists.txt
importance_of_hiding_symbols_example/my_library_no_export/include/: bar_no_export.h
importance_of_hiding_symbols_example/src/: foo_exported.cpp  simple_example.cpp
simple_program/: CMakeLists.txt  README.md
simple_program_different_include/: CMakeLists.txt  README.md
simple_program_different_include/src/: foo.cpp
undefined_reference_error_sample/: CMakeLists.txt  README.md
undefined_reference_error_sample/my_library/: CMakeLists.txt
undefined_reference_error_sample/my_library/include/: bar.h
undefined_reference_error_sample/my_library/src/: bar.cpp
undefined_reference_error_sample/src/: simple_example.cpp
